--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "viewer-frontend",
   "private": true,
   "version": "0.1.0",
+  "engines": {
+    "node": ">=20 <21"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
