--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   "devDependencies": {
     "@types/node": "20.11.30",
     "@types/react": "18.2.66",
+    "@typescript-eslint/eslint-plugin": "^8.44.0",
+    "@typescript-eslint/parser": "^8.44.0",
     "autoprefixer": "10.4.20",
     "eslint": "^9.35.0",
     "eslint-config-next": "^15.5.3",
     "postcss": "8.4.41",
     "tailwindcss": "3.4.10",
-    "typescript": "5.4.5",
-    "@typescript-eslint/parser": "^8.44.0",
-    "@typescript-eslint/eslint-plugin": "^8.44.0"
+    "typescript": "5.4.5"
   }
 }
